--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "lah4life",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "mongodb": "^2.2.22"
   }
 }
