--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "lah4life",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "express": "^4.14.1",
+    "googleapis": "^16.1.0",
     "mongodb": "^2.2.22"
   }
 }
