--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
     "googleapis": "^16.1.0",
-    "mongodb": "^2.2.22"
+    "mongodb": "^2.2.22",
+    "path": "^0.12.7"
   }
 }
